<resources>
    <string name="app_name">高方手游助手</string>
    <string name="versionnum">版本：Version 1.14</string>
    <string name="action_settings">Settings</string>
    <string name="gameTxt">游戏</string>
    <string name="toolbar_home">手游助手</string>
    <string name="toolbar_game">网游</string>
    <string name="toolbar_singlegame">单机</string>
    <string name="toolbar_gift">礼包</string>
    <string name="toolbar_down">下载</string>
    <string name="toolbar_person">会员</string>
    <string name="tap_home_recommend">推荐</string>
    <string name="tap_home_crack">破解</string>
    <string name="tap_home_classify">分类</string>
    <string name="tap_home_subject">专题</string>
    <string name="tap_home_sort">排行</string>
    <string name="tap_game_choiceness">推荐</string>
    <string name="base_again_exit">再按一次关闭程序!</string>
    <string name="menu_index">返回首页</string>
    <string name="menu_version">版本更新</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_setting">下载管理</string>
    <string name="menu_about">关于我们</string>
    <string name="menu_user">帐号管理</string>
    <string name="menu_guestbook">意见反馈</string>
    <string name="home_tuijian">推荐</string>
    <string name="home_cate">分类</string>
    <string name="home_new">最新</string>
    <string name="down_guanzhu">已关注</string>
    <string name="down_read">已查看</string>
    <string name="down_center">下载</string>
    <string name="gift_tuijian">推荐</string>
    <string name="gift_hot">热门</string>
    <string name="back">返回</string>
    <string name="neterror">网络信号不好，请重试连接！</string>
    <string name="refetch">再试一下</string>
    <string name="more">更多</string>
    <string name="refresh">刷新</string>
    <string name="lastestupdate">最近更新</string>
    <string name="lastestcomic">最新作品</string>
    <string name="itemMore">加载更多10条</string>
    <string name="menu_exit">退出</string>
    <string name="slash">|</string>
    <string name="down_load_name">次下载</string>
    <string name="reward">下载安装并启动游戏，送</string>
    <string name="special_slash">/</string>
    <string name="special_striping">~</string>
    <string name="nomatch">没有符合的游戏哦！</string>
    <string name="gift_option_content">礼包内容</string>
    <string name="gift_option_tao">边领边淘</string>
    <string name="gift_option_about">相关礼包</string>
    <string name="gift_detail_title">礼包详情</string>
    <string name="game_detail_title">游戏详情</string>
    <string name="login_actionbar">91手游账号登录</string>
    <string name="user_name">账号:</string>
    <string name="user_name_1">账号</string>
    <string name="user_name_hint">请输入手机号/邮箱/用户名</string>
    <string name="pwd">密码:</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="user_name_register_hint">用户名(6-16位字母或字母数字组合)</string>
    <string name="pwd_register_hint">密码(6-16位字符)</string>
    <string name="pwd_register_rehint">请输入确认密码(6-16位字符)</string>
    <string name="backpwd_title">忘记密码</string>
    <string name="login_backpwd_text">忘记密码</string>
    <string name="terms_error_content">请阅读并同意安智用户协议</string>
    <string name="login">立即登录</string>
    <string name="email">请输入正确的邮箱</string>
    <string name="read_and_accepted">阅读并同意</string>
    <string name="accepted">同意</string>
    <string name="terms">91手游助手用户协议</string>
    <string name="registertxt">会员注册</string>
    <string name="register">立即注册</string>
    <string name="commit">提交</string>
    <string name="register_email">注册邮箱</string>
    <string name="user_handle_loading">处理中，请稍候</string>
    <string name="login_progress">账号%s正在登录</string>
    <string name="register_progress">注册中，请稍候</string>
    <string name="login_error">您的账号或密码错误，请重新输入</string>
    <string name="register_user_lenght">用户名为6–16位字母或字母数字组合</string>
    <string name="register_pwd_lenght">密码为6–16位字符</string>
    <string name="register_email_null">请输入邮箱</string>
    <string name="register_email_error">邮箱格式不正确</string>
    <string name="login_user_error">请输入账号</string>
    <string name="login_pwd_error">请输入密码</string>
    <string name="register_success">注册成功</string>
    <string name="recover_password_success">找回密码成功，请查收邮件</string>
    <string name="activity_title">活动</string>
    <string name="gift_more_title">更多</string>
    <string name="local_gift_txt_more">领取更多礼包</string>
    <string name="gift_residue_size">剩余：</string>
    <string name="gift_type">礼包类型：</string>
    <string name="gift_starttime">开始时间：</string>
    <string name="gift_endtime">结束时间：</string>
    <string name="gift_ma">礼包号：</string>
    <string name="gift_draw">可领次数：</string>
    <string name="gift_condition">领取资格：</string>
    <string name="gift_desc">礼包详情</string>
    <string name="gift_explain">使用方法</string>
    <string name="gift_about">相关礼包</string>
    <string name="gift_error_fail">加载信息出错...</string>
    <string name="gift_order_success">预约成功</string>
    <string name="gift_already_order">已预约</string>
    <string name="gift_obtained">已领取</string>
    <string name="gift_order">预约</string>
    <string name="gift_obtain">领取</string>
    <string name="gift_taohao">淘号</string>
    <string name="gift_end">结束</string>
    <string name="gift_detail">详情</string>
    <string name="gift_obtain_success">领取成功</string>
    <string name="gift_condition_prefix">需消耗</string>
    <string name="gift_condition_binding">需手机绑定</string>
    <string name="gift_condition_verify">需短信验证</string>
    <string name="gift_old_condition_prefix">原价</string>
    <string name="gift_condition_1">%1$s金币和%2$s萌点</string>
    <string name="gift_condition_2">%1$s金币</string>
    <string name="gift_condition_3">%1$s萌点</string>
    <string name="gift_condition_4">免费</string>
    <string name="gift_cost_gold">金币</string>
    <string name="gift_cost_or">和</string>
    <string name="gift_cost_moe">萌点</string>
    <string name="gift_error_1">积分条件不足</string>
    <string name="gift_error_2">礼包领取失败</string>
    <string name="gift_error_3">领取数量超过上限</string>
    <string name="gift_auto_logining">正在自动登录，请稍后再试</string>
    <string name="gift_need_login">礼包需要登录后才可以领取</string>
    <string name="gift_dialog_content_prefix">你确定要花费</string>
    <string name="gift_dialog_content">兑换一个%1$s吗？</string>
    <string name="gift_dialog_tao_content_1">试试运气，也许还有未激活的账号哦！（淘号会消耗</string>
    <string name="gift_dialog_tao_content_2">）</string>
    <string name="gift_dialog_obtain_success_1">恭喜您成功领到了%1$s</string>
    <string name="gift_dialog_obtain_success_2">恭喜您成功淘到了%1$s</string>
    <string name="gift_dialog_tao_caution">该礼包可能已经被激活</string>
    <string name="gift_dialog_not_enough_1">客官，您的</string>
    <string name="gift_dialog_not_enough_2">不够啦~</string>
    <string name="gift_dialog_collect">请多收点%1$s以后再来兑换吧~</string>
    <string name="gift_dialog_smile">~~o(>_&lt;)o ~~</string>
    <string name="gift_dialog_conversion">立即兑换</string>
    <string name="gift_dialog_cardcode">卡密:</string>
    <string name="gift_dialog_cancel">取消</string>
    <string name="gift_dialog_title">温馨提示</string>
    <string name="gift_dialog_copy">复制卡密</string>
    <string name="gift_dialog_copy_success">复制成功</string>
    <string name="gift_dialog_copy_fail">复制失败</string>
    <string name="gift_obtain_copy">复制卡密</string>
    <string name="gift_obtain_return">返回</string>
    <string name="gift_obtain_result_title">礼包详情</string>
    <string name="gift_obtain_result_success">复制成功</string>
    <string name="gift_obtain_result_fail">复制失败</string>
    <string name="gift_valid_time">有效时间：</string>
    <string name="gift_tao_item_copy">复制</string>
    <string name="gift_reflush">换一批</string>
    <string name="gift_gain_gold">如何赚取金币萌点</string>
    <string name="gift_validate_phone_binging">您还未绑定手机,获取验证码的同时将自动为您绑定输入的号码</string>
    <string name="gift_dialog_phone_validate_title">请输入验证码</string>
    <string name="gift_phone_validate_gain_hint">请输入手机号码</string>
    <string name="phone_number_validate">手机号码格式不正确！</string>
    <string name="gift_phone_validate_vali_hint">请输入验证码</string>
    <string name="gift_phone_validate_gain">获取验证码</string>
    <string name="gift_phone_validate_vali">验证</string>
    <string name="gift_validate_text">没有收到短信？%1$s秒后</string>
    <string name="gift_validate_retry">重发一次>></string>
    <string name="gift_phone_count_down">%1$s秒</string>
    <string name="text_detail">详情</string>
    <string name="text_download">下载</string>
    <string name="game_unfole">展开</string>
    <string name="game_shrink">收起</string>
    <string name="game_evaluate">评价</string>
    <string name="game_interesting">好玩(%1$s)</string>
    <string name="game_uninteresting">不好玩(%1$s)</string>
    <string name="no_content">暂无内容</string>
    <string name="page_no_content">页面空空的，没有内容啊</string>
    <string name="gift_empty">您还没有领过礼包呢，赶快去领吧!</string>
    <string name="no_content_goto_gift">领取礼包</string>
    <string name="history_no_content">该软件的历史版本暂未收录</string>
    <string name="no_content_goto_home">去首页看看</string>
    <string name="game_about">猜你喜欢</string>
    <string name="game_brief">简介</string>
    <string name="add_fav">关注</string>
    <string name="cancel_fav">取消关注</string>
    <string name="load_empty_nodata">暂无数据信息</string>
    <string name="loading">正在努力加载中</string>
    <string name="nofav">没有关注的游戏</string>
    <string name="newchapter">new</string>
    <string name="noread">没有已查看的游戏</string>
    <string name="delete">删除</string>
    <string name="downloadmanager">下载管理</string>
    <string name="edit">编辑</string>
    <string name="nodownload">暂时没有下载任务</string>
    <string name="button">开始下载</string>
    <string name="success">下载完成</string>
    <string name="error">下载出错</string>
    <string name="stopbutton">暂停下载</string>
    <string name="sdcarderror">没有SD卡</string>
    <string name="searchhint">搜索游戏</string>
    <string name="searcherror">发生错误，请刷新后再试</string>
    <string name="searchtip">请输入要搜索的关键词</string>
    <string name="searchhottip">热门游戏榜</string>
    <string name="close">关闭</string>
    <string name="acountmanager">用户登录</string>
    <string name="feed_submit_succ">我们已收到您的反馈，谢谢！</string>
    <string name="feed_submit_erro">反馈信息提交失败！请重试！</string>
    <string name="feed_email_error">Email格式错误</string>
    <string name="feed_content_empty">请填写反馈内容</string>
    <string name="game_wait">请稍等</string>
    <string name="game_choose_title">请选择图片</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="otherlogin">您可以使用QQ和微博登录</string>
    <string name="wifi_required_title">文件太大，不适于通过运营商网络下载</string>
    <string name="wifi_recommended_title">稍后再加入下载队列吗？</string>
    <string name="button_queue_for_wifi">排队</string>
    <string name="button_cancel_download">取消</string>
    <string name="button_start_now">立即开始</string>
    <string name="notification_need_wifi_for_size">此大小的文件需要通过 Wi-Fi 下载</string>
    <string name="notification_download_complete">下载完成</string>
    <string name="notification_download_failed">下载失败</string>
    <string name="notification_filename_separator">,\u0020</string>
    <string name="download_unknown_title">&lt;未命名></string>
    <string name="wifi_required_body">您必须使用 Wi-Fi才能完成此 %1$s文件的下载。\n\n点击%2$s可在下次连接到 Wi-Fi 网络时开始此下载。</string>
    <string name="wifi_recommended_body">立即开始此%1$s文件的下载可能会缩短电池的使用时间并/或导致超额使用移动数据连接（这会导致移动运营商依照流量套餐中的超额规定向您收费）。\n\n点击下面的%2$s可在下次连接到 Wi-Fi 网络时开始此下载。</string>
    <string name="copyright">Copyright 2015–2020 庐陵一王   版权所有</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="about">&#160;&#160; &#x000A;&#x000D;&#160;&#160;&#160;&#160;首先感谢你们下载，这是我个人花了几个礼拜做的，图片资源都是来自91手游助手，同时也借鉴了一些网友的一些UI，毕竟一个人弄，时间精力有限，能力也有限，希望你们多多支持，如果有什么意见与建议，请发邮件wspw8023@sina.com</string>
    <string name="aboutUs">&#160;&#160; &#x000A;&#x000D;&#160;&#160;&#160;&#160;本软件安装、下载使用过程中完全免费，联网所产生的流量费用由网络运营商收取。软件中刊载的所有内容（文字、图片等）均来源于网络，并非本人收集存储，如版权作者对此存在异议请及时与本人联系，本人将妥善处理。本软件免费供大家体验，望在您体验本软件时尊重软件开发者的合法权益，如需要源码请联系QQ:1661846950或邮件:wspw8023@sina.com。如有意见或建议欢迎与我联系，谢谢！</string>
</resources>